hphp/hack/test/typecheck/reactive/rx_superglobals9.php.exp
File "rx_superglobals9.php", line 5, characters 8-12:
Superglobal $_ENV cannot be used in a reactive context. (Typing[4227])
